ajuste no css da section projetos alteração por button

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body{
 }
 
 .header .navbar a:hover,
-.header .navbar a.active{
+.header .navbar a.active-btn{
     color: var(--main-color);
 }
 
@@ -208,6 +208,188 @@ body{
     transition: .7s ease-in-out;
 }
 
+
+/* ------------------------- section sobre mim ----------------------------*/
+
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+    background: var(--second-bg-color);
+    min-height: 100vh;
+    
+}
+
+.about-content{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem 2%;
+   
+}
+
+.about-content-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 49%;
+    
+}
+
+.about-img{
+    width: 100px;
+  
+}
+
+.about-img img{
+    width: 14rem;
+    border-radius: 2rem;
+    box-shadow: 0 0 2rem var(--main-color);
+}
+
+.heading{
+    text-align: center;
+    font-size: 3rem;
+}
+
+.about-content-text h2{
+    text-align: left;
+    line-height: 1.2;
+    
+}
+
+h2 span{
+    color: var(--main-color);
+}
+
+.about-content-text h3{
+    font-size: 2.2rem;
+}
+
+.about-content-text p{
+    font-size: 1rem;
+    text-align: justify;
+    margin: 1.6rem 0 2.2rem;
+}
+
+.about-skill{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.skill-title{
+    font-size: 2.6rem;
+    font-weight: bold;
+    letter-spacing: .1rem;
+}
+
+.cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.box{
+    width: var(--card-width);
+    height: var(--card-height);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    /* padding: 0 36px; */
+    perspective: 2500px;
+    margin: 0 .6rem;
+    cursor: pointer;
+
+
+    
+}
+
+.cover-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+   
+  }
+  
+  .wrapper {
+    transition: all 0.5s;
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+
+  }
+  
+  .box:hover .wrapper {
+    transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+    box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  }
+  
+  .wrapper::before,
+  .wrapper::after {
+    content: "";
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    transition: all 0.5s;
+    position: absolute;
+    left: 0;
+  }
+  .wrapper::before {
+    top: 0;
+    height: 100%;
+    background-image: linear-gradient(
+      to top,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+  .wrapper::after {
+    bottom: 0;
+    opacity: 1;
+    /* background-image: linear-gradient(
+      to bottom,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 88%,
+      rgba(12, 13, 19) 97%
+    ); */
+  }
+  
+  .box:hover .wrapper::before,
+  .wrapper::after {
+    opacity: 1;
+  }
+  
+  .box:hover .wrapper::after {
+    height: 120px;
+  }
+
+  .character {
+    width: 100%;
+    opacity: 0;
+    transition: all 0.5s;
+    position: absolute;
+    z-index: -1;
+    
+  }
+  
+  .box:hover .character {
+    opacity: 1;
+    transform: translate3d(0%, -30%, 100px);
+  }
+
+
 /* -------------------  section projetos --------------------------- */
 .content-pro{
     position: relative;
@@ -253,7 +435,7 @@ body{
     z-index: 1;
 }
 
-.navigation ul li a{
+.navigation ul li button {
     position: relative;
     display: flex;
     justify-content: center;
@@ -263,9 +445,13 @@ body{
     text-align: center;
     font-weight: 600;
     text-decoration: none;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 }
 
-.navigation ul li a .icon{
+.navigation ul li button .icon {
     position: relative;
     display: block;
     line-height: 85px;
@@ -275,12 +461,11 @@ body{
     transition: .5s;
 }
 
-.navigation ul li.active  a .icon{
+.navigation ul li.active button .icon {
     transform: translateY(-32px);
-
 }
 
-.navigation ul li a .text{
+.navigation ul li button .text {
     position: absolute;
     color: white;
     font-weight: 600;
@@ -289,15 +474,14 @@ body{
     transform: translateY(20px);
     opacity: 0;
     transition: .9s;
-    
 }
 
-.navigation ul li.active a .text{
+.navigation ul li.active button .text {
     opacity: 1;
     transform: translateY(10px);
-
 }
-.navigation ul li a .circle{
+
+.navigation ul li button .circle {
     position: absolute;
     display: block;
     width: 55px;
@@ -306,10 +490,10 @@ body{
     border-radius: 50%;
     border: 1.8px solid white;
     transform: translateY(-37px) scale(0);
-
 }
 
-.navigation ul li.active a .circle{
+
+.navigation ul li.active button .circle {
     transform: translateY(-37px) scale(1);
     transition: .5s;
     transition-delay: .2s;
