ajuste no scroll skill

--- a/css/style.css
+++ b/css/style.css
@@ -289,77 +289,98 @@ h2 span{
     letter-spacing: .1rem;
 }
 
-.wrapper-skill{
-    border: 1px solid lightskyblue;
-    width: 90%;
-    max-width: 1200px;
-    margin-inline: auto;
-    position: relative;
-    height: 100px;
-    margin-top: 5rem;
+.scroller {
+    max-width: 700px;
+  }
+  
+  .scroller__inner {
+    padding-block: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  
+  .scroller[data-animated="true"] {
     overflow: hidden;
-    /* mask-image: ; */
-
-
-}
-
-@keyframes scrollleft{
-    
+    -webkit-mask: linear-gradient(
+      90deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
+    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  }
+  
+  .scroller[data-animated="true"] .scroller__inner {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--_animation-duration, 50s)
+      var(--_animation-direction, forwards) linear infinite;
+  }
+  
+  .scroller[data-direction="right"] {
+    --_animation-direction: reverse;
+  }
+  
+  .scroller[data-direction="left"] {
+    --_animation-direction: forwards;
+  }
+  
+  .scroller[data-speed="fast"] {
+    --_animation-duration: 20s;
+  }
+  
+  .scroller[data-speed="slow"] {
+    --_animation-duration: 50s;
+  }
+  
+  @keyframes scroll {
     to {
-        left: -200px;
+      transform: translate(calc(-50% - 0.5rem));
     }
-}
-
-.wrapper-skill.item{
-    width:200px;
-    height: 100px;
-    background-color: rgb(0, 0, 0);
-    border: 3px solid red;
-    border-radius: 6px;
-    
-    position: absolute;
-    left: 100%;
-    animation-name: scrollleft;
-    animation-duration: 30s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-delay: 10s;
-
-
-}
-
-.wrapper-skill .item1{
-    animation-delay: calc(30s / 8 * (8 - 1) ) ;
-}
-
-.wrapper-skill .item2{
-    animation-delay:calc(30s / 8 * (8 - 3) )  ;
-}
-
-.wrapper-skill .item3{
-    animation-delay: calc(30s / 8 * (8 - 5) ) ;
-}
-
-.wrapper-skill .item4{
-    animation-delay: calc(30s / 8 * (8 - 7) ) ;
-}
-
-.wrapper-skill .item5{
-    animation-delay:calc(30s / 8 * (8 - 9) )  ;
-}
-
-.wrapper-skill .item6{
-    animation-delay: calc(30s / 8 * (8 - 11) ) ;
-}
-
-.wrapper-skill .item7{
-    animation-delay:calc(30s / 8 * (8 - 13) ) ;
-}
-
-.wrapper-skill .item8{
-    animation-delay:calc(30s / 8 * (8 - 15) )  ;
-}
-
+  }
+  
+  /* general styles */
+  
+  :root {
+    --clr-neutral-100: hsl(0, 0%, 100%);
+    --clr-primary-100: hsl(205, 15%, 58%);
+    --clr-primary-400: hsl(215, 25%, 27%);
+    --clr-primary-800: hsl(217, 33%, 17%);
+    --clr-primary-900: hsl(218, 33%, 9%);
+  }
+  
+  html {
+    color-scheme: dark;
+  }
+  
+  body {
+    display: grid;
+    min-block-size: 100vh;
+    place-content: center;
+    font-family: system-ui;
+    font-size: 1.125rem;
+    background-color: var(--clr-primary-800);
+  }
+  
+  .tag-list {
+    margin: 0;
+    padding-inline: 0;
+    list-style: none;
+  }
+  
+  .tag-list li {
+    padding: 1rem;
+    background: var(--clr-primary-400);
+    border-radius: 0.5rem;
+    box-shadow: 0 0.5rem 1rem -0.25rem var(--clr-primary-900);
+  }
+  
+  /* for testing purposed to ensure the animation lined up correctly */
+  .test {
+    background: red !important;
+  }
 
 
 
