--- a/css/style.css
+++ b/css/style.css
@@ -223,17 +223,23 @@ body{
 }
 
 .about-content{
+    width: 82%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 1rem 2%;
+    padding: 3rem 2%;
+    margin-top: 9rem;
+
+    background: var(--bg-color);
+    border-radius: 10px;
+
    
 }
 
 .about-content-text{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     flex-direction: column;
     width: 49%;
     
@@ -258,6 +264,8 @@ body{
 .about-content-text h2{
     text-align: left;
     line-height: 1.2;
+
+    border-bottom: 3px solid gray;
     
 }
 
@@ -270,11 +278,101 @@ h2 span{
 }
 
 .about-content-text p{
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-align: justify;
     margin: 1.6rem 0 2.2rem;
+    letter-spacing: .1em;
+    line-height: 1.5em;
 }
 
+
+.about-content-text .btn-about{
+    padding: .7rem 3rem;
+    border: 1px solid var(--main-color);
+    border-radius: 6px;
+    text-decoration: none;
+    color: var(--text-color);
+    font-weight: bold;
+    font-size: 1.2rem;
+    cursor: pointer;
+    outline: none;
+    background: none;
+
+    transition: .4s ease-in-out;
+}
+
+.about-content-text .btn-about:hover{
+    background: var(--main-color);
+    color: var(--second-bg-color);
+
+}
+
+/* modal about */
+.modal-about {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-top: 60px;
+}
+
+/* Estilo específico do conteúdo do modal */
+.modal-content-about {
+    background-color: var(--second-bg-color);
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 800px;
+    border-radius: 10px;
+}
+
+/* Estilo do botão de fechar o modal */
+.modal-content-about .close {
+    color: var(--text-color);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.modal-content-about .close:hover,
+.modal-content-about .close:focus {
+    color:var(--main-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Estilos específicos dentro do modal */
+.modal-content-about h2 {
+    color: #333;
+    border-bottom: 2px solid #333;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.modal-content-about h3 {
+    color: #666;
+    margin-top: 20px;
+}
+
+.modal-content-about ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.modal-content-about ul li {
+    margin-bottom: 10px;
+}
+
+
+
+
+/* -------------------------------------- */
 .about-skill{
     text-align: center;
     display: flex;
