--- a/css/style.css
+++ b/css/style.css
@@ -349,24 +349,25 @@ h2 span{
 
 /* Estilos específicos dentro do modal */
 .modal-content-about h2 {
-    color: #333;
-    border-bottom: 2px solid #333;
+    color: var(--text-color);
+    border-bottom: 2px solid var(--main-color);
     padding-bottom: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 1.5rem;
 }
 
 .modal-content-about h3 {
-    color: #666;
+    color: var(--text-color);
     margin-top: 20px;
 }
 
 .modal-content-about ul {
-    list-style-type: none;
+    list-style-type: circle;
     padding-left: 0;
+    margin: 1rem 2rem;
 }
 
 .modal-content-about ul li {
-    margin-bottom: 10px;
+   margin: .4rem;
 }
 
 
