--- a/css/style.css
+++ b/css/style.css
@@ -145,15 +145,28 @@ body{
 
 
 .home-img{
-    max-width: 450px;
+    max-width: 1000px;
     margin-right: -20px;
    
     opacity: 0;
     animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
     animation-delay: 2s, 3s;
 }
+
+.home-img:hover{
+    opacity: 0;
+    animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 2s, 3s;
+}
 .home-img img{
-     border-radius: 50%;
+    width: 100%;
+    height: 800px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-radius: 20px;
+    
      box-shadow: 0 0 2.2rem var(--main-color);
 }
 
@@ -217,7 +230,7 @@ body{
     align-items: center;
     flex-direction: column;
     gap: 4rem;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
     min-height: 100vh;
     
 }
@@ -230,7 +243,7 @@ body{
     padding: 3rem 2%;
     margin-top: 9rem;
 
-    background: var(--bg-color);
+    background: var(--second-bg-color);
     border-radius: 10px;
 
    
@@ -246,14 +259,19 @@ body{
 }
 
 .about-img{
-    width: 100px;
+    max-width: 1000px;
+    width: 800px;
   
 }
 
 .about-img img{
-    width: 14rem;
+    width: 100%;
+    height: 800px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 2rem;
-    box-shadow: 0 0 2rem var(--main-color);
+    /* box-shadow: 0 0 2rem var(--main-color); */
 }
 
 .heading{
