--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,14 @@ body{
 
 }
 
+.header .logo img{
+    width: 250px;
+    height: 90px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .header .navbar{
     font-size: 1rem;
     
