--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 2rem 9%;
+    padding: .8rem 9%;
     background: var(--second-bg-color)
 }
 
