--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 2rem 9%;
+    padding: 1rem 9%;
     background: var(--bg-color);
     display: flex;
     justify-content: space-between;
@@ -17,8 +17,12 @@
 .header .sticky{
     border-bottom: .1rem solid rgba(0,0,0, .2);
 }
+.header .img-logo{
+    width: 100px;
+    height: 40px;
+}
 
-.header .logo{
+.header .img-logo .logo{
     font-size: 1.35rem;
     color:var(--text-color);
     text-decoration: none;
@@ -31,7 +35,7 @@
 
 .header .logo img{
     width: 250px;
-    height: 90px;
+    height: 50px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
