--- a/css/projetos.css
+++ b/css/projetos.css
@@ -10,6 +10,8 @@
     flex-direction: column;
     background: #06021b;
     min-height: 100vh;
+    height: auto;
+    padding: 5rem 0;
 
 }
 
@@ -64,7 +66,7 @@
     position: relative;
     display: block;
     line-height: 85px;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     text-align: center;
     color: white;
     transition: .5s;
@@ -194,11 +196,14 @@
 
 /* Container para os projetos */
 #card-projetos {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+   
     gap: 2rem;
     justify-content: center;
     padding: 1rem;
+    height: auto;
 }
 
 /* Estilo para cada caixa de projeto */
@@ -208,66 +213,90 @@
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     position: relative;
-    width: 600px;
+    width: 500px;
+    height: 350px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Efeito de hover para ampliar o projeto */
 .box:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
-/* Estilo para a capa do projeto */
 .cover {
     position: relative;
+    height: 100%;
 }
 
-/* Imagem da capa */
 .cover img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
     display: block;
 }
 
-/* Detalhes do projeto */
 .details {
     position: absolute;
-    bottom: 0;
+    top: -90%;
     left: 0;
     width: 100%;
     background: rgba(0, 0, 0, 0.6);
     color: #f9f9f9;
     padding: 1rem;
     box-sizing: border-box;
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
 }
 
-/* Título e tecnologias */
+.box:hover .details {
+    transform: translateY(0);
+}
+
 .details p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 500;
+    font-size: 1.8rem;
+    font-weight: 600;
     margin: 0;
     margin-bottom: 0.5rem;
+    text-align: left;
 }
 
 .mini-languages {
     display: flex;
+    justify-content: space-between;
     gap: 0.5rem;
+    padding: 0 1.5rem 0 0;
 }
 
-.mini-languages img {
+.mini-languages .lang{
+    display: flex;
+    gap: .5rem;
+}
+
+.mini-languages .lang img {
     width: 24px;
     height: 24px;
     display: block;
 }
 
-/* Descrição do projeto */
+.mini-languages span{
+    font-weight: bold;
+}
+
 .description {
     background-color: #2a2a2a;
-    padding: 1rem;
+    padding: .62rem;
     border-radius: 0 0 1rem 1rem;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
+}
+
+.box:hover .description {
+    transform: translateY(0);
 }
 
 .description p {
@@ -281,13 +310,12 @@
 .description a {
     display: inline-block;
     color: #8257E6;
-    font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
     font-weight: 500;
     text-decoration: none;
     border: 1px solid #8257E6;
     border-radius: 2rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 3rem;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -295,7 +323,6 @@
     background-color: #8257E6;
     color: #f9f9f9;
 }
-
 
 .modal {
     display: none; 
