--- a/css/projetos.css
+++ b/css/projetos.css
@@ -1,5 +1,3 @@
-
-
 .content-pro{
     position: relative;
     width: 100%;
@@ -324,54 +322,130 @@
     color: #f9f9f9;
 }
 
-.modal {
-    display: none; 
+#modalInfoProjetos {
+    width: 100%;
+    max-width: 75%;
+    min-width: 40%;
+    background: #13131F;
+    position: fixed; /* Para fixar o modal no centro da tela */
+    z-index: 1001; /* Superior ao overlay */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 8px;
+    display: none; /* Escondido inicialmente */
+}
+
+/* Overlay escurecido */
+.modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+    background: rgba(0, 0, 0, 0.7); /* Escurecer a tela */
+    z-index: 1000; /* Logo abaixo do modal */
+    display: none; /* Escondido inicialmente */
+}
+
+/* Quando o modal está aberto */
+.show-modal {
+    display: block !important;
+}
+
+#modalInfoProjetos .header-modal{
+        width: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        padding: .5rem 2rem 0 0;
+    }
+
+    .header-modal svg {
+        width: 30px;
+        cursor: pointer;
+        fill: #fff; 
+        transition: fill 0.3s ease; 
+    }
+    
+    .header-modal svg:hover {
+        fill: #8257E6; 
+    }
+    .header-modal img {
+        width: 30px;
+        cursor: pointer;
+        filter: invert(0); 
+        transition: filter 0.3s ease;
+    }
+    
+    .header-modal img:hover {
+        filter: invert(1);
+    }
    
-  }
-  
-  .modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 800px;
-    position: relative;
-  }
-  
-  .modal-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  #modal-video iframe {
-    width: 100%;
-    height: 400px;
-  }
-  
-  #modal-links a {
-    display: block;
-    margin: 5px 0;
-    color: #007BFF;
-    text-decoration: none;
-  }
-  
-  #modal-links a:hover {
-    text-decoration: underline;
+  /* .hidden-modal{
+    display: none;
+  } */
+
+  .container-modal{
+    padding-left: 1rem;
   }
 
+  .container-modal .title{
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+    
+  }
+
+  .content-modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  .content-modal .info{
+    padding-right: 1.5rem;
+   
+  }
+
+  .content-modal .info span{
+    font-size: 1.5rem;
+    padding-bottom: .3rem;
+    border-bottom: 1px solid #fff;
+   
+  }
+
+  .content-modal .info p{
+    font-size: 14px;
+    margin-top: 1rem;
+    line-height: 1.5em"
+  }
+
+  .container-modal .links{
+    display: flex;
+    width: auto;
+    justify-content: start;
+    gap: 2rem;
+    align-items: center;
+    padding: 1rem .3rem;
+  }
+  .container-modal .links a{
+    text-decoration: none;
+    width: 180px;
+    /* background: #8257E6; */
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    padding: .6rem 0;
+    border-radius: 15px;
+    border: 2px solid #8257E6;
+    transition: .3s ease-in-out;
+  }
+
+  .container-modal .links a:hover{
+    background: #8257E6;
+  }
 
   /* key frames */
 @keyframes slideRight{
