--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 1rem 9%;
+    padding: .5rem 9%;
     background: var(--bg-color);
     display: flex;
     justify-content: space-between;
@@ -34,11 +34,9 @@
 }
 
 .header .logo img{
-    width: 250px;
-    height: 50px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    width: 200px;
+    height: 70px;
+    object-fit: cover;
 }
 
 .header .navbar{
