--- a/css/projetos.css
+++ b/css/projetos.css
@@ -166,7 +166,7 @@
 
 .content-pro .card-projetos{
     width: 90%;
-    background:rgba(255, 255, 255, 0.483);
+    /* background:rgba(255, 255, 255, 0.483); */
     margin-top: 1rem;
 }
 
