--- a/css/projetos.css
+++ b/css/projetos.css
@@ -20,9 +20,9 @@
 }
 
 
-.navigation{
+.navigation {
     position: relative;
-    width: 400px;
+    width: 550px;
     height: 70px;
     background: linear-gradient(45deg, #2196f3, #e91e63);
     display: flex;
@@ -31,15 +31,15 @@
     border-radius: 10px;
 }
 
-.navigation ul{
+.navigation ul {
     display: flex;
-    width: 350px;
+    width: 450px;
 }
 
-.navigation ul li{
+.navigation ul li {
     position: relative;
-    width: 80px;
-    height: 80px;
+    width: 70px; 
+    height: 70px; 
     list-style: none;
     z-index: 1;
 }
@@ -51,9 +51,9 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     text-align: center;
     font-weight: 600;
-    text-decoration: none;
     background: none;
     border: none;
     padding: 0;
@@ -63,8 +63,8 @@
 .navigation ul li button .icon {
     position: relative;
     display: block;
-    line-height: 85px;
-    font-size: 2.3rem;
+    line-height: 75px;
+    font-size: 1.5rem; 
     text-align: center;
     color: white;
     transition: .5s;
@@ -78,7 +78,7 @@
     position: absolute;
     color: white;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: .85rem; 
     letter-spacing: .05em;
     transform: translateY(20px);
     opacity: 0;
@@ -93,33 +93,32 @@
 .navigation ul li button .circle {
     position: absolute;
     display: block;
-    width: 55px;
-    height: 55px;
+    width: 50px; 
+    height: 50px;
     background: transparent;
     border-radius: 50%;
     border: 1.8px solid white;
     transform: translateY(-37px) scale(0);
 }
 
-
 .navigation ul li.active button .circle {
-    transform: translateY(-37px) scale(1);
+    transform: translateY(-35px) scale(1); 
     transition: .5s;
     transition-delay: .2s;
 }
 
-.indicator{
+.indicator {
     position: absolute;
     top: -50%;
     width: 70px;
     height: 70px;
-    background:linear-gradient(45deg, #2196f3, #e91e63) ;
+    background: linear-gradient(45deg, #2196f3, #e91e63);
     border: 6px solid #06021b;
     border-radius: 50%;
     transition: .5s;
 }
 
-.indicator::before{
+.indicator::before {
     content: '';
     position: absolute;
     top: 50%;
@@ -127,11 +126,11 @@
     width: 20px;
     height: 20px;
     background: transparent;
-    border-top-right-radius:20px ;
+    border-top-right-radius: 20px;
     box-shadow: 1px -10px 0 #06021b;
 }
 
-.indicator::after{
+.indicator::after {
     content: '';
     position: absolute;
     top: 50%;
@@ -139,34 +138,37 @@
     width: 20px;
     height: 20px;
     background: transparent;
-    border-top-left-radius:20px ;
+    border-top-left-radius: 20px;
     box-shadow: -1px -10px 0 #06021b;
 }
 
-.navigation ul li:nth-child(1).active~.indicator{
+.navigation ul li:nth-child(1).active ~ .indicator {
     transform: translateX(calc(70px * 0));
 }
 
-.navigation ul li:nth-child(2).active~.indicator{
+.navigation ul li:nth-child(2).active ~ .indicator {
     transform: translateX(calc(70px * 1));
 }
 
-.navigation ul li:nth-child(3).active~.indicator{
+.navigation ul li:nth-child(3).active ~ .indicator {
     transform: translateX(calc(70px * 2));
 }
 
-.navigation ul li:nth-child(4).active~.indicator{
+.navigation ul li:nth-child(4).active ~ .indicator {
     transform: translateX(calc(70px * 3));
 }
 
-.navigation ul li:nth-child(5).active~.indicator{
+.navigation ul li:nth-child(5).active ~ .indicator {
     transform: translateX(calc(70px * 4));
+}
+
+.navigation ul li:nth-child(6).active ~ .indicator {
+    transform: translateX(calc(70px * 5));
 }
 
 
 .content-pro .card-projetos{
     width: 90%;
-    /* background:rgba(255, 255, 255, 0.483); */
     margin-top: 1rem;
 }
 
