--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import 'header.css';
 @import 'home.css';
 @import 'about.css';
+@import 'skills.css';
 @import 'projetos.css';
 @import 'contact.css';
 @import 'footer.css'
