--- a/css/projetos.css
+++ b/css/projetos.css
@@ -90,7 +90,7 @@
     transform: translateY(10px);
 }
 
-.navigation ul li button .circle {
+.navigation ul li button .circle-nav {
     position: absolute;
     display: block;
     width: 50px; 
@@ -101,7 +101,7 @@
     transform: translateY(-37px) scale(0);
 }
 
-.navigation ul li.active button .circle {
+.navigation ul li.active button .circle-nav {
     transform: translateY(-35px) scale(1); 
     transition: .5s;
     transition-delay: .2s;
