--- a/css/skills.css
+++ b/css/skills.css
@@ -3,16 +3,166 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap:3rem ;
     background: var(--bg-color);
     min-height: 100vh;
     
 }
 
-.skill-title{
+.skills-title{
     font-size: 2.6rem;
     font-weight: bold;
     letter-spacing: .1rem;
+    
 }
+
+
+.container-skills-info{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 0 9%;
+  gap: 2rem;
+}
+
+.skills-section {
+  width: 600px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.skill {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  position: relative;
+}
+
+.skill-title {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 30%;
+}
+
+.skill-title ion-icon {
+  font-size: 30px;
+  color: #00d1ff;
+}
+
+.progress-bar {
+  background-color: #243b55;
+  width: 60%;
+  height: 8px;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.progress {
+  height: 100%;
+  background-color: #00d1ff;
+  border-radius: 10px;
+  animation: growBar 2s ease-out forwards;
+}
+
+.percentage {
+  width: 10%;
+  text-align: right;
+  font-weight: bold;
+}
+
+.skills-section .grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.circle-skills {
+  text-align: center;
+}
+
+.circle-skills .circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: conic-gradient(
+      #243b55 0%,
+      #243b55 100%
+  );
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto 10px;
+}
+
+.circle-skills .circle::before {
+  content: '';
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  background: #0d1b2a;
+  border-radius: 50%;
+}
+
+.circle-skills .circle span {
+  position: relative;
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  z-index: 10;
+}
+
+.skill-name {
+  display: block;
+  margin-top: 5px;
+}
+
+.circle-skills .circle[data-percent="90"] {
+  --percent: 90;
+}
+.circle-skills .circle[data-percent="65"] {
+  --percent: 65;
+}
+.circle-skills .circle[data-percent="75"] {
+  --percent: 75;
+}
+.circle-skills .circle[data-percent="85"] {
+  --percent: 85;
+}
+
+/* Animations */
+@keyframes growBar {
+  from {
+      width: 0%;
+  }
+  to {
+      width: var(--progress-width);
+  }
+}
+
+@keyframes fillCircle {
+  from {
+      background: conic-gradient(
+          #243b55 0%,
+          #243b55 100%
+      );
+  }
+  to {
+      background: conic-gradient(
+          #00d1ff calc(var(--progress, 0) * 1%), 
+          #243b55 0%
+      );
+  }
+}
+
+
+
 
 .scroller {
     max-width: 1400px;
