--- a/css/projetos.css
+++ b/css/projetos.css
@@ -196,14 +196,14 @@
 
 /* Container para os projetos */
 #card-projetos {
+    max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-   
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 2rem;
     justify-content: center;
     padding: 1rem;
     height: auto;
+   
 }
 
 /* Estilo para cada caixa de projeto */
@@ -213,8 +213,9 @@
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     position: relative;
-    width: 500px;
-    height: 350px;
+    width: 100%;
+    max-width: 400px;
+    max-height: 300px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -229,10 +230,9 @@
 }
 
 .cover img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto; /* Mantém proporção */
     object-fit: cover;
-    display: block;
 }
 
 .details {
@@ -522,5 +522,17 @@
     transform: translateY(0);
 
    }
+}
+
+@media (max-width: 768px) {
+    #card-projetos {
+        grid-template-columns: 1fr; /* 1 coluna em telas pequenas */
+        justify-content: center;
+        
+    }
+
+    .box {
+        height: auto; /* Ajusta a altura para caber melhor */
+    }
 }
   
