--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 6rem;
+     gap: 2rem; 
     padding: 3rem 2%;
     margin-top: 9rem;
 
@@ -40,8 +40,9 @@
 }
 
 .about-img img{
+    max-width: 600px;
     width: 100%;
-    height: 800px;
+    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -71,7 +72,7 @@ h2 span{
 }
 
 .about-content-text p{
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: justify;
     margin: 1.6rem 0 2.2rem;
     letter-spacing: .1em;
