--- a/css/about.css
+++ b/css/about.css
@@ -35,7 +35,8 @@
 
 .about-img{
     max-width: 1000px;
-    width: 800px;
+    width: 49%;
+    
   
 }
 
@@ -166,15 +167,67 @@ h2 span{
 
 
 
+@media screen and (min-width: 500px) and (max-width: 768px) {
 
-/* -------------------------------------- */
-.about-skill{
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    .about-content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+       
+       
+       
+    }
+    .about-img{
+        max-width: 500px;
+        min-width:  300px;
+        width: 100%;
+       
+      
+    }
+
+    .about-img img{
+        max-width: 100%;
+        width: 100%;
+        height: 500px;
+        
+    }
+
+    .about-content-text{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: column;
+        width: 60%;
+        
+    }
+
+    .about-content-text p{
+        font-size: .9rem;
+        
+    }
 }
 
+@media screen and (min-width: 380px) and (max-width: 499px) {
+    .about-content{
+        width: 100%;
+        flex-direction: column;
+       
+    }
+    .about-img{
+        width: 100%;
+       
+      
+    }
+    .about-img img{
+        max-width: 100%;
+        width: 100%;
+        height: 400px;
+        
+    }
+
+    .about-content-text{
+        
+        width: 90%;
+        
+    }
+}
